--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
-<header>
+<header class = "col-12 align-content-center">
     <h1>Welcome</h1>
     <h2>The current date time is: </h2>
     <h3 id="date-time"></h3>
 </header>
-<body>
+<body class = "container-fluid row col-12">
     <!-- User entry card + bootstrap instructions -->
-    <section>
+    <section class = "col-3">
         <div class="card" style="width: 18rem;">
             <div class="card-body">
               <h5 class="card-title">Instructions</h5>
@@ -30,7 +30,7 @@
               <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"> Add Project </button>
             </div>
           </div>
-        <div class="modal" id = "exampleModal"tabindex="-1">
+        <div class="modal" id = "exampleModal" tabindex="-1">
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
@@ -43,12 +43,20 @@
                     <form>
                         <label for = "project-name">Project Name: </label>
                         <input type = "text" name = "Project" id="project-name" placeholder="Enter here">
+                        <br>
                         <label for = "project-type">Project Type:</label>
-                        <input type = "text" name = "Project" id="project-type" placeholder="click here to select">
-                        <label for = "project-name"></label>
-                        <input type = "text" name = "Project" id="project-name" placeholder="Enter here">
-                        <label for = "project-name"></label>
-                        <input type = "text" name = "Project" id="project-name" placeholder="Enter here">
+                        <select class="custom-select">
+                            <option selected>Open this select menu</option>
+                            <option value="1">One</option>
+                            <option value="2">Two</option>
+                            <option value="3">Three</option>
+                          </select>
+                          <br>
+                        <label for = "hourly-rate">Hourly ($)</label>
+                        <input type = "number" name = "hourly-rate" id="hourly-rate" placeholder="Enter here">
+                        <br>
+                        <label for = "due-date"> Due Date</label>
+                        <input type = "date" name = "due-date" id="due-date" placeholder="Click here">
                     </form>
                 </div>
                 <div class="modal-footer">
@@ -61,8 +69,39 @@
 
     </section>
     <!-- Project display board -->
-    <section>
-
+    <section class = "col-9">
+        <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">First</th>
+                <th scope="col">Last</th>
+                <th scope="col">Handle</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+                <td>@fat</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>Larry</td>
+                <td>the Bird</td>
+                <td>@twitter</td>
+              </tr>
+            </tbody>
+          </table>
     </section>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
